# verilog-to-superconducting

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md  requirements-dev.txt
.github/workflows/: rust.yml
crates/blif/: Cargo.toml  SYNTAX.md
crates/blif/src/: ast.rs  parser.rs
crates/parsec/: Cargo.toml
crates/parsec/src/: combinators.rs  lib.rs  sequence.rs  state.rs
crates/verilog/: Cargo.toml
crates/vts_aiger/: Cargo.toml  SYNTAX.md
crates/vts_aiger/src/: lib.rs  parser.rs  reader.rs
crates/vts_archfpga/: Cargo.toml
crates/vts_archfpga/src/: lib.rs
crates/vts_archspga/: Cargo.toml
crates/vts_blif/: Cargo.toml  SYNTAX.md
crates/vts_blif/src/: ast.rs  blifchar.rs  cursor.rs  emitter.rs  error.rs  lexer.rs  lib.rs  parser.rs  strspan.rs  token.rs
crates/vts_circuitbuilder/: Cargo.toml  main.rs
crates/vts_circuitbuilder/builder/: Cargo.toml  README.md
crates/vts_circuitbuilder/builder/src/: lib.rs
crates/vts_circuitbuilder/src/: builder.rs  formats.rs  lib.rs
crates/vts_fpgaarch/: Cargo.toml
crates/vts_fpgaarch/src/: ast.rs  lib.rs  parser.rs
crates/vts_lefdef/: Cargo.toml
crates/vts_lefdef/src/: defchar.rs  error.rs  lib.rs  token.rs
crates/vts_parsec/: Cargo.toml
crates/vts_pcomps/: Cargo.toml
crates/vts_pcomps/src/: comp.rs  de.rs  formats.rs  lib.rs  param.rs  ser.rs
crates/vts_rtlir/: Cargo.toml
crates/vts_rtlir/src/: lib.rs
crates/vts_shared/: Cargo.toml
crates/vts_shared/src/: cursor.rs  lib.rs  strref.rs  strspan.rs
crates/vts_verilog/: Cargo.toml
crates/vts_yosys/: Cargo.toml
crates/vts_yosys/vts-yosys-sys/: .clang-format  CMakeLists.txt  Cargo.toml  build.rs  wrapper.cpp  wrapper.h
crates/vts_yosys/vts-yosys-sys/frontends/ast/: ast.cc  ast.h  ast_binding.cc  ast_binding.h  genrtlil.cc  simplify.cc
crates/vts_yosys/vts-yosys-sys/frontends/verilog/: const2ast.cc  preproc.cc  preproc.h  verilog_frontend.cc  verilog_frontend.h  verilog_lexer.cc  verilog_parser.tab.cc  verilog_parser.tab.hh
crates/vts_yosys/vts-yosys-sys/kernel/: binding.cc  binding.h  calc.cc  celltypes.h  fmt.cc  fmt.h  hashlib.h  macc.h  register.cc  register.h  rtlil.cc  rtlil.h  sigtools.h  utils.h  yosys.cc  yosys.h
crates/vts_yosys/vts-yosys-sys/libs/bigint/: BigInteger.cc  BigInteger.hh  BigIntegerAlgorithms.cc  BigIntegerAlgorithms.hh  BigIntegerLibrary.hh  BigIntegerUtils.cc  BigIntegerUtils.hh  BigUnsigned.cc  BigUnsigned.hh  BigUnsignedInABase.cc  BigUnsignedInABase.hh  NumberlikeArray.hh
crates/vts_yosys/vts-yosys-sys/libs/json11/: json11.cpp
crates/vts_yosys/vts-yosys-sys/libs/sha1/: sha1.cpp  sha1.h
crates/vts_yosys/vts-yosys-sys/passes/cmds/: select.cc
crates/vts_yosys/vts-yosys-sys/src/: lib.rs
crates/vts_yosys/yosys-mini-sys/: CMakeLists.txt  Cargo.toml  bigint.cpp  bigint.h  build.rs  rtlil.cpp  rtlil.h  smoke_test.cpp  verilog.cpp  verilog.h  verilog_lexer.cpp  verilog_parser.cpp  verilog_parser.h  wrapper.cpp  wrapper.h  yosys_mini.cpp  yosys_mini.h
crates/vts_yosys/yosys-mini-sys/src/: bindings.rs  lib.rs
crates/vts_yosys/yosys-sys/: Cargo.toml  build.rs  wrapper.h
crates/yosys-sys/: Cargo.toml  build.rs
examples/alu/: Makefile  add4.json  add4.rtlil  add4.sv  alu4.json  alu4.rtlil  alu4.sv  synth.ys  testbench.sv
examples/circuitbuilder/: ble2_sync.py
examples/crc/: Makefile  crc16.json  crc16.rtlil  crc16.sv  crc8.json  crc8.rtlil  crc8.sv  synth.ys  testbench.sv
scripts/: chortle.py  yosys-dl.py
src/: main.rs
(+7 files in other folders)
