[package]
name = "vts_circuitbuilder"
version = "0.0.0"
edition = "2021"

[dependencies]
derive_builder = "0.12.0"
serde = { version = "1.0.183", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
vts_shared = { path = "../vts_shared" }

[dev-dependencies]
serde_json = "1.0.104"
