[package]
name = "vts_circuitbuilder"
version = "0.0.0"
edition = "2021"

[dependencies]
derive_builder = "0.12.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
serde_yaml = "0.9.25"
toml = "0.7.6"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
vts_shared = { path = "../vts_shared" }
