[package]
name = "derive_builder"
version = "0.0.0"
edition = "2021"
autotests = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.82", features = ["diff"] }

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn =  { version = "2.0.28", features = ["extra-traits"] }

